# nomad-rs

./: .dockerignore  .gitignore  .octopus-tentacle  Cargo.toml  Cross.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  help.html  index.html  src-files.js
.github/workflows/: docs.yml
.octopus/: epic.md  log.md  master-todo.md
.octopus/contracts/: constants.rs  errors.rs  frames.rs  messages.rs  mod.rs  traits.rs
crates/nomad/: Cargo.toml
crates/nomad-client/: Cargo.toml
crates/nomad-client/src/: lib.rs
crates/nomad-core/: Cargo.toml
crates/nomad-core/src/: constants.rs  error.rs  lib.rs  traits.rs
crates/nomad-crypto/: Cargo.toml
crates/nomad-crypto/src/: lib.rs
crates/nomad-extensions/: Cargo.toml
crates/nomad-extensions/src/: lib.rs
crates/nomad-protocol/: Cargo.toml
crates/nomad-protocol/src/: lib.rs
crates/nomad-protocol/src/client/: mod.rs
crates/nomad-protocol/src/core/: mod.rs  traits.rs
crates/nomad-protocol/src/crypto/: keys.rs  mod.rs  noise.rs  nonce.rs  rekey.rs  session.rs
crates/nomad-protocol/src/extensions/: mod.rs
crates/nomad-protocol/src/server/: mod.rs
crates/nomad-protocol/src/sync/: mod.rs
crates/nomad-protocol/src/transport/: connection.rs  error.rs  mod.rs
crates/nomad-server/: Cargo.toml
crates/nomad-server/src/: lib.rs
crates/nomad-sync/: Cargo.toml
crates/nomad-sync/src/: lib.rs
crates/nomad-transport/: Cargo.toml
crates/nomad-transport/src/: connection.rs  error.rs  frame.rs  lib.rs  pacing.rs  socket.rs  timing.rs
crates/nomad/src/: lib.rs
docs/: crates.js  index.html  settings.html
docs/nomad_protocol/: index.html  sidebar-items.js
docs/search.index/: 01dfc53d8e3f.js  03fe54aa9f1d.js  04675e0a24d3.js  04c7dddd897e.js  057dd03a084c.js  05c5f9b8e95f.js  07c4ab2fc750.js  08605cf36598.js  09ff4f07a9c6.js  0ab9d042ae60.js  0c098025a239.js  0ec53d0f0fff.js  0f80bfd3fcb7.js  1025eb84eecc.js  104f55fb427a.js  11265d30531e.js  12ed83f18447.js  13cbfc7df8c1.js  144e319f6d3d.js  18cd017fdc64.js  193b8ee9f4a3.js  19c793252a65.js  1bb2d49cca11.js  1cc9b14a9cf6.js  1ce190e916a1.js  1cfd17322012.js  1dff18b6af44.js  1e3f2aa9ff40.js  1eb1e44668d1.js  1f776f178b21.js  1f93799c975d.js  2026e3216712.js  205b3e84ef8a.js  238b79c36a2e.js  249de252ce07.js  24c34e82dd08.js  25aaf4a7f0d0.js  25d5dd90c0e8.js  28500bd4e317.js  2a323ef28b4c.js  (+98 more)
examples/echo/: Cargo.toml  Dockerfile  Dockerfile.client-arm  Dockerfile.server-x86  README.md
examples/echo/scripts/: generate-keys.sh
examples/echo/src/: client.rs  health.rs  main.rs  server.rs  state.rs
nomad_protocol/: all.html  index.html
nomad_protocol/client/: enum.BootstrapError.html  enum.ClientError.html  enum.ClientState.html  fn.prepare_bootstrap.html  index.html  struct.BootstrapConfig.html  struct.BootstrapResult.html  struct.ClientConfig.html  struct.ClientIdentity.html  struct.NomadClient.html  struct.NomadClientBuilder.html  struct.ServerInfo.html  struct.StateReceiver.html  struct.StateSender.html
nomad_protocol/core/: constant.AEAD_NONCE_SIZE.html  constant.AEAD_TAG_SIZE.html  constant.COLLECTION_INTERVAL.html  constant.DATA_FRAME_HEADER_SIZE.html  constant.DEAD_INTERVAL.html  constant.DEFAULT_COMPRESSION_LEVEL.html  constant.DELAYED_ACK_TIMEOUT.html  constant.EXT_COMPRESSION.html  constant.EXT_PREDICTION.html  constant.EXT_SCROLLBACK.html  constant.FLAG_ACK_ONLY.html  constant.FLAG_HAS_EXTENSION.html  constant.FRAME_TYPE_CLOSE.html  constant.FRAME_TYPE_DATA.html  constant.FRAME_TYPE_HANDSHAKE_INIT.html  constant.FRAME_TYPE_HANDSHAKE_RESP.html  constant.FRAME_TYPE_REKEY.html  constant.HANDSHAKE_BACKOFF.html  constant.HANDSHAKE_MAX_RETRIES.html  constant.HANDSHAKE_TIMEOUT.html  constant.HASH_SIZE.html  constant.INITIAL_RTO.html  constant.KEEPALIVE_INTERVAL.html  constant.MAX_EPOCH.html  constant.MAX_FRAME_RATE.html  constant.MAX_RETRANSMITS.html  constant.MAX_RTO.html  constant.MIN_COMPRESS_SIZE.html  constant.MIN_DATA_FRAME_SIZE.html  constant.MIN_FRAME_INTERVAL_MS.html  constant.MIN_HANDSHAKE_INIT_SIZE.html  constant.MIN_HANDSHAKE_RESP_SIZE.html  constant.MIN_RTO.html  constant.NONCE_DIR_INITIATOR.html  constant.NONCE_DIR_RESPONDER.html  constant.OLD_KEY_RETENTION.html  constant.PRIVATE_KEY_SIZE.html  constant.PROTOCOL_VERSION.html  constant.PUBLIC_KEY_SIZE.html  constant.RECOMMENDED_MAX_PAYLOAD.html  (+15 more)
nomad_protocol/crypto/: constant.AAD_SIZE.html  constant.SESSION_KEY_SIZE.html  enum.Direction.html  enum.Role.html  fn.construct_aad.html  fn.construct_nonce.html  fn.decrypt.html  fn.decrypt_in_place.html  fn.derive_rekey_auth_key.html  fn.derive_rekey_keys.html  fn.encrypt.html  fn.encrypt_in_place.html  fn.parse_nonce.html  index.html  sidebar-items.js  struct.CryptoSession.html  struct.HandshakeResult.html  struct.InitiatorHandshake.html  struct.OldKeyRetention.html  struct.RekeyState.html  struct.ReplayWindow.html  struct.ResponderHandshake.html  struct.SessionId.html  struct.SessionKey.html  struct.SessionKeys.html  struct.StaticKeypair.html
nomad_protocol/extensions/: constant.CHECKPOINT_HEADER_SIZE.html  constant.DEFAULT_COMPRESSION_LEVEL.html  constant.DEFAULT_MAX_BATCH_BYTES.html  constant.DEFAULT_MAX_BATCH_SIZE.html  constant.DEFAULT_MAX_DELAY_MS.html  constant.EXTENSION_HEADER_SIZE.html  constant.MIN_COMPRESS_SIZE.html  enum.CheckpointRequest.html  enum.CompressResult.html  enum.CompressionError.html  enum.Priority.html  (+26 more)
search.index/: 0066e3c90905.js  006c7fb6e7a9.js  00c8b343fad4.js  00ea2d93f2d2.js  0129d11e3f1a.js  014618efcde2.js  0171c8970560.js  01790f36e58e.js  020aff5dff5b.js  023f024d6937.js  0242bdb3a00e.js  0249fa8dc02f.js  02a691758bf5.js  02f15dd7148d.js  0338f951b112.js  03773bd327e9.js  03a25ca6b25b.js  03d0ba6d2bff.js  03ef17bc210d.js  03f2b0f8c39a.js  04793e9c663c.js  04985cf49fb3.js  04a3be7cb7d0.js  04a7ed1d9502.js  050fe73c4a8b.js  051c5172126a.js  059b1cbbdd4c.js  05d66ec7d572.js  05ffbd8111a4.js  062c889dd1f0.js  06664fa30fce.js  06883ad82d80.js  069b3bb3ec5b.js  06a36a4d7837.js  06ad022acf6b.js  0746778eba4c.js  07ad80c69727.js  07af7598f9a5.js  07e6ca5f7d1c.js  080e66ed1b12.js  (+555 more)
src/: lib.rs
(+630 files in other folders)
