[package]
name = "nomad-client"
description = "NOMAD Protocol - High-level async client API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["client", "async", "networking", "nomad"]
categories = ["network-programming", "asynchronous"]

[dependencies]
nomad-core.workspace = true
nomad-crypto.workspace = true
nomad-transport.workspace = true
nomad-sync.workspace = true
nomad-extensions.workspace = true
tokio.workspace = true
thiserror.workspace = true
