[package]
name = "nomad-crypto"
description = "NOMAD Protocol - Security layer with Noise_IK handshake and XChaCha20-Poly1305 AEAD"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["cryptography", "noise", "xchacha20", "aead", "nomad"]
categories = ["cryptography", "network-programming"]

[dependencies]
nomad-core.workspace = true
snow.workspace = true
chacha20poly1305.workspace = true
blake2.workspace = true
zeroize.workspace = true
rand.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex.workspace = true
json5.workspace = true
serde.workspace = true
