[package]
name = "nomad-extensions"
description = "NOMAD Protocol - Optional extensions including zstd compression"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
nomad-core.workspace = true
thiserror.workspace = true

[dependencies.zstd]
workspace = true
optional = true

[features]
default = ["compression"]
compression = ["dep:zstd"]
