[package]
name = "nomad-protocol"
description = "NOMAD Protocol - Network-Optimized Mobile Application Datagram. A secure UDP-based state synchronization protocol."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
# Error handling
thiserror.workspace = true

# Transport layer dependencies
tokio = { workspace = true, optional = true }

# Crypto dependencies (future)
# snow = { workspace = true, optional = true }
# chacha20poly1305 = { workspace = true, optional = true }
# blake2 = { workspace = true, optional = true }
# zeroize = { workspace = true, optional = true }
# rand = { workspace = true, optional = true }

# Compression extension (future)
# zstd = { workspace = true, optional = true }

[dev-dependencies]
hex.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
default = ["transport"]

# Transport layer (frames, RTT, pacing, sockets)
transport = ["dep:tokio"]

# Crypto layer (not yet implemented)
# crypto = ["dep:snow", "dep:chacha20poly1305", "dep:blake2", "dep:zeroize", "dep:rand"]

# Sync layer (not yet implemented)
# sync = ["transport"]

# Extensions (not yet implemented)
# extensions = []

# Compression extension (not yet implemented)
# compression = ["extensions", "dep:zstd"]

# High-level APIs (not yet implemented)
# client = ["transport", "sync", "crypto"]
# server = ["transport", "sync", "crypto"]

# All features
# full = ["transport", "sync", "crypto", "extensions", "client", "server"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
