[package]
name = "nomad-server"
description = "NOMAD Protocol - Server library"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nomad-core.workspace = true
nomad-crypto.workspace = true
nomad-transport.workspace = true
nomad-sync.workspace = true
nomad-extensions.workspace = true
tokio.workspace = true
thiserror.workspace = true
