[package]
name = "nomad-transport"
description = "NOMAD Protocol - Transport layer with frame encoding, RTT estimation, and connection migration"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
nomad-core.workspace = true
nomad-crypto.workspace = true
tokio.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex.workspace = true
json5.workspace = true
serde.workspace = true
